arrs/radarr/ingress-patch.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: arr
spec:
  entryPoints:
    - web 
  routes:
    - kind: Rule
      match: Host(`radarr.local.net`)
      services:
        - name: radarr-svc
          port: 80
